Definindo marca visual

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/Controle de Gastos
+/Controle de Gastos/bin/Debug
+/Controle de Gastos/obj/Debug
