Adicionando criptografia de dados

--- a/Controle de Gastos/Controle de Gastos.csproj
+++ b/Controle de Gastos/Controle de Gastos.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Code.cs" />
     <Compile Include="Classes\File.cs" />
     <Compile Include="Classes\Data.cs" />
     <Compile Include="FrmRead.cs">
