--- a/Controle de Gastos/Controle de Gastos.csproj
+++ b/Controle de Gastos/Controle de Gastos.csproj
@@ -47,9 +47,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Receipt.cs" />
     <Compile Include="Classes\Code.cs" />
     <Compile Include="Classes\File.cs" />
     <Compile Include="Classes\Data.cs" />
+    <Compile Include="FrmReceipt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmReceipt.Designer.cs">
+      <DependentUpon>FrmReceipt.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmRead.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +85,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRead.resx">
       <DependentUpon>FrmRead.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmReceipt.resx">
+      <DependentUpon>FrmReceipt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -149,6 +159,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Undelete.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Receipt.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\UpdateReceive.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
