--- a/Controle de Gastos/Controle de Gastos.csproj
+++ b/Controle de Gastos/Controle de Gastos.csproj
@@ -166,5 +166,11 @@
   <ItemGroup>
     <None Include="Resources\UpdateReceive.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
